apps/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: httpd-24-rhel8
  labels:
    app: httpd-24-rhel8
    app.kubernetes.io/component: httpd-24-rhel8
    app.kubernetes.io/instance: httpd-24-rhel8
    app.kubernetes.io/part-of: httpd-24-rhel8-app
    app.openshift.io/runtime-version: latest
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    app: httpd-24-rhel8
    deploymentconfig: httpd-24-rhel8
  type: ClusterIP
  sessionAffinity: None
